--- a/docs/sql/sfmc-sql-basics.mdx
+++ b/docs/sql/sfmc-sql-basics.mdx
@@ -5,115 +5,34 @@ title: SFMC SQL Basics
 
 import { LeadText } from '../../src/components/LeadText.js';
 
-<LeadText content='' />
+<LeadText content='SELECT your best contacts FROM Salesforce Marketing Cloud WHERE Data Filter is not enough.' />
 
 ## SQL in Salesforce Marketing Cloud
 
-SQL is
+SQL (Structured Query Language) is one of the best way to work with relational databases. And Marketing Cloud's Data Extensions, with the help of Data Designer, offer exactly that. A relational database. Same for system Data Views containing tracking data.Because of this, SQL is used in SFMC whenever powerful segmentation is needed (mostly using Automation Studio).
 
-The main difference from standard SQL (more or less SQL Server 2005) is that Salesforce Marketing Cloud supports only SELECT statement. Neither INSERT, UPDATE or DELETE are officially supported. This is because the queries are executed as a part of backend query and are limited to provide non-breakable functionality.
+The main difference from standard SQL (SFMC uses more or less SQL Server 2005) is that SFMC supports only `SELECT` statement. Neither `INSERT`, `UPDATE` or `DELETE` are officially supported. This is because the queries are executed as a part of backend query and are limited to provide non-breakable functionality.
 
-Another limiting characteristic of SFMC SQL is limitation of queries to data stored in data extensions or system data views. The results are always saved in data extensions.
+Another limiting characteristic of SFMC SQL is visible in the data accessible by queries. Only data stored in data extensions or system data views is available. Moreover, the results are always saved in data extensions. The reason is other data structures of SFMC are not relational databases.
 
-Finally, the very important limitation that you might hit as your Marketing Cloud grows is the AutoKill. This script automatically stops your query if its execution time exceeds the 30 minutes limit.
+Finally, the very important limitation that you might hit as your Marketing Cloud grows is the AutoKill. It will automatically stop your query if execution time exceeds the 30 minutes limit. Think about the query with future in the mind. It is especially important for queries that are supposed to be backbones of your data management flow in Marketign Cloud. Even if it works great now, consider how it will behave once you have more data in the system. One of the great ways to not trigger AutoKill is to implement retention periods for the Data Extensions used in the query to limit input data.
 
 ## Fundamentals of SQL queries
 
-The most important two SQL commands that you will be using in every single query are `SELECT` and `FROM`.
+SQL is very easy to read, but requires a bit of understanding to write. However, with only the `SELECT` being availble, it is really easy to grasp.
 
-### SELECT
+There are four most important elements you will be using in nearly every query in SFMC:
 
-`SELECT` is starting each query and defines to columns of data extension that will be used within the query.
+* `SELECT`: tell the query what data you want to leverage
+* `FROM`: tell the query where the data is in Marketing Cloud (name of Data Extension or System Data View)
+* `JOIN`/`ON`: tell the query how you want to merge data from multiple sources
+* `WHERE`: tell the query which part of the above data is interesting to you
 
-The simplect version of this statement is `SELECT *`, which targets all available columns from the source, but it is not recommended approach. It is awful for both readability and performance of your query.
-
-The prefered method is targeting columns by their names:
-
-```sql
-SELECT emailaddress, [Favorite Colour]
-```
-
-
-
-* `FROM`: location where data reside within Marketing Cloud (usually a data extension)
-* `JOIN`/`ON`: allows the query to search multiple tables and/or data extensions
-* `WHERE`: used to filter out data you do/don’t want
-
-```sql
-SELECT emailaddress as ‘Email_Address’, [Favorite Colour] as ‘Favorite_Color’
-FROM [MasterData Extension] m
-INNER JOIN JuneMarketingSend j
-ON m.emailaddress = j.emailaddress
-WHERE m.emailaddress is not NULL
-```
-
-Running this query retrieves email and favorite color from the master data extension, and joins it with any matching email addresses from the June marketing send. Additionally, it only returns emails that are not missing. Also notice the m and the j. These are SQL aliases that are used to give a table, or a field in a table, a temporary name. This is especially helpful when you have a common field name between data extensions, like CustomerID or EmailAddress. You can also see it written like the following.
-
-SELECT o.OrderID, o.OrderDate, c.CustomerName
-FROM Customers AS c, Orders AS o
-WHERE c.CustomerID=o.CustomerID
-
-Example for exclusive offer to customers who have opened an email in the last 6 months and have made a purchase during that time.
-
-SELECT c.EmailAddress, c.CustomerID, c.First_Name
-FROM Customers c
-INNER JOIN Purchases p
-ON c.CustomerID = p.CustomerID
-WHERE [Purchase Date] > DateAdd(month, -6, GetDate()) AND [Open Date] > DateAdd(month, -6, GetDate())
-
-
-Common Queries
-Parent Accounts
-You can query data extensions in the Shared Data Extension folder from the parent account by adding the prefix ent. to the data extension name in the query. 
-SELECT EmailAddress
-FROM ent.MasterDataExtension
-
-All the Data
-Sometimes you want everything.
-SELECT *
-FROM MasterDataExtension
-Use SELECT * very carefully as this can cause slowness in the system as it is processing a large amount of data. The larger the dataset, the greater time and effort the system has to use to obtain the data. Queries time-out after 30 minutes, and the more data to process, the more likely the query can time out. To help with this, it is more effective to provide the exact fields you are looking for in the query. 
-SELECT field1, field2, field3
-FROM MasterDataExtension
-
-
-System Data Views
-System data views are Salesforce-created queries that you can use to find information about your subscribers. Just remember, you won’t be able to make changes to these precreated data views. Here are some of the most commonly used views.
-Full list: https://help.salesforce.com/articleView?id=mc_as_data_views.htm&type=5
-
-Bounce
-_bounce
-Identify and then suppress commonly bounced email addresses from sends.
-
-Click and Open
-_Click
-_Open
-Query these data views in Automation Studio to view click and open data for emails from your Marketing Cloud account.
-Helps to identify additional messaging opportunities by indicating subscriber engagement on a specific JobID.
-Click and open tracking data displays in Central Standard Time, does not observe Daylight Savings Time, and is rounded to the nearest second.
-
-Complaint
-_Complaint
-Query this data view in Automation Studio to view complaints data related to emails from your Marketing Cloud account.
-Use to prune your lists to ensure more accurate audiences and improve deliverability.
-
-SELECT SubscriberKey,JobID,SMTPBounceReason
-FROM _Complaint
-
-Journey
-_Journey
-Find a journey's status, created and last modified date, and other general journey information using this Journey Builder data view.
-
-
-## Best Practices
-
-1. Avoid non-searchable operators for the WHERE clause (OR, NOT, <, >, NOT EXISTS, NOT IN, NOT LIKE, intrinsic functions). Those operators cannot take advantage of indexes and cause the query activity to run more slowly. More efficient operators (=, AND) improve queries.
-2. For queries involving data views, implement a 6-month cap. Often the performance is dramatically better limited to no more than 30 days.
-3. Think about the query with future in the mind. It is especially important for queries that are supposed to be backbones of your data management flow in Marketign Cloud. Even if it works great now, consider how it will behave once you have more data in the system. One of the great ways to not trigger AutoKill is to implement retention periods for the Data Extensions used in the query.
-4. Stage the data! Break the work into pieces, if possible, or use an AltText Query Activity and implement with small, committed batches.
-5. Limit your update sets to one million records and batch through them.
-6. Avoid Data Extensions spanning a cumulative field width greater than 4000 characters.
-7. Limit the use of SELECT *
+To learn more about writing queries check out articles on [SQL Statements](/docs/sql/sfmc-sql-statements) and [SFMC Data Views](/docs/sql/sfmc-sql-system-data-views).
 
 ## Query Studio
+
+Working with queries in out-of-the-box version of Salesforce Marketing Cloud is quite hard. Whenever you want to check the output of your query you must run the SQL Query in Automation Studio and check the output Data Extension. There is, however, a better way.
+
+A [Query Studio](https://appexchange.salesforce.com/appxListingDetail?listingId=a0N3A00000FP3yFUAT) created by Salesforce itself. It is Marketign Cloud App available in [AppExchange](https://appexchange.salesforce.com/appxListingDetail?listingId=a0N3A00000FP3yFUAT) that is must-have for anyone interested in working with SQL in SFMC. Think about SQL Server Studio or, if this is not telling you much, a one-stop-shop for writing, validating, checking and saving your queries. Test it. You will never look back.
 
