Updates to consider addition of SQL docs to the website

--- a/docs/docs-and-snippets.mdx
+++ b/docs/docs-and-snippets.mdx
@@ -5,7 +5,7 @@ title: Docs & Snippets
 
 import { LeadText } from '../src/components/LeadText.js';
 
-<LeadText content="SSJS + JS documentation and code snippets that I find useful for developing Marketing Automation." />
+<LeadText content="SSJS + JS + SQL documentation and code snippets that I find useful for developing Marketing Automation." />
 
 ## Server-Side JavaScript
 
@@ -15,6 +15,10 @@ SSJS is an XX-century-version of JavaScript paired with proprietary libraries cr
 
 In this part, I am gathering selected elements of modern vanilla JavaScript that I find useful for marketing technologists. Expect guides on asynchronous calls to API and backend resources, form-focused DOM manipulation and playing with data objects.
 
+## SFMC SQL
+
+To fully leverage the Salesforce Marketing Cloud Data Extensions and Automation Studio, SQL is a must-have. Here I gathered both the language basics as well as some of the most useful snippets to copy and paste shamelessly.
+
 ## Changes
 
-I'm updating the docs ongoingly, so expect changes. You can track those by watching and starring the website's [Github Repository](https://github.com/MateuszDabrowski/mateuszdabrowski.pl). Additional languages might come (I'm thinking about you, SQL).
+I'm updating the docs ongoingly, so expect changes. You can track those by watching and starring the website's [Github Repository](https://github.com/MateuszDabrowski/mateuszdabrowski.pl). Additional languages might come (I'm thinking about you, GTL).
