Added description for proper meta data on all doc pages

--- a/docs/js/js-loops.mdx
+++ b/docs/js/js-loops.mdx
@@ -1,6 +1,7 @@
 ---
 id: js-loops
 title: Loops
+description: JavaScript offers four for loops and two while loops. What's the difference?
 ---
 
 import Tabs from '@theme/Tabs';
