--- a/docs/sql/sfmc-sql-basics.mdx
+++ b/docs/sql/sfmc-sql-basics.mdx
@@ -1,6 +1,8 @@
 ---
 id: sfmc-sql-basics
-title: SQL Basics
+title: SFMC SQL Basics
+sidebar_label: SQL Basics
+description: SELECT your best contacts FROM Salesforce Marketing Cloud WHERE Data Filter is not enough
 ---
 
 import { LeadText } from '../../src/components/LeadText.js';
