--- a/docs/sql/sfmc-sql-statements.mdx
+++ b/docs/sql/sfmc-sql-statements.mdx
@@ -1,6 +1,8 @@
 ---
 id: sfmc-sql-statements
-title: SQL Statements
+title: SFMC SQL Statements
+sidebar_label: SQL Statements
+description: All you need to know about SQL to segment your contacts in SFMC
 ---
 
 import { LeadText } from '../../src/components/LeadText.js';
@@ -42,7 +44,7 @@ SELECT
     Gender__c AS Gender
 ```
 
-### Adding new values
+### New values
 
 Labels are also used for passing new values directly from your query. Need to add a custom string to outcome data extension? Or maybe synchonization timestamp for debugging purposes? You can leverage SQL for it.
 
