--- a/docs/ssjs/ssjs-basics.mdx
+++ b/docs/ssjs/ssjs-basics.mdx
@@ -6,3 +6,9 @@ title: SSJS Basics
 import { LeadText } from '../../src/components/LeadText.js';
 
 <LeadText content="About" />
+
+Topics:
+What is SSJS (ES3)
+SSJS vs AMPScript
+Blocks
+Quirks (including ES3 limitations with links to specific topics)
