--- a/docs/ssjs/ssjs-loops.mdx
+++ b/docs/ssjs/ssjs-loops.mdx
@@ -1,6 +1,7 @@
 ---
 id: ssjs-loops
 title: Loops
+description: Let's dive into limited looping options of the SSJS
 ---
 
 import Tabs from '@theme/Tabs';
