--- a/ideas/ideas.mdx
+++ b/ideas/ideas.mdx
@@ -1,6 +1,7 @@
 ---
 id: ideas
 title: Ideas
+description: Step-by-step implementation guides on various Marketing Automation ideas
 ---
 
 import { LeadText } from '../src/components/LeadText.js';
