--- a/sites/licence.mdx
+++ b/sites/licence.mdx
@@ -1,6 +1,7 @@
 ---
 id: licence
 title: License & Attribution
+description: Let's talk copyrights in a human-readable way
 ---
 
 import { LeadText } from '../src/components/LeadText.js';
