--- a/sites/privacy.mdx
+++ b/sites/privacy.mdx
@@ -1,6 +1,7 @@
 ---
 id: privacy
 title: Privacy
+description: Legal stuff. Short and simple
 ---
 
 import { LeadText } from '../src/components/LeadText.js';
