--- a/ideas/engage-with-countdown.mdx
+++ b/ideas/engage-with-countdown.mdx
@@ -1,6 +1,7 @@
 ---
 id: engage-with-countdown
 title: Engage with Countdown
+description: Start boosting conversion rates right now! There are many ways to engage customers, and urgency is the king among them. Learn how to leverage it today.
 ---
 
 import Tabs from '@theme/Tabs';
