--- a/sites/toolset.mdx
+++ b/sites/toolset.mdx
@@ -1,6 +1,7 @@
 ---
 id: my-toolset
 title: Toolset
+description: Show me your tools, and I will tell you who you are. Or so they say
 ---
 
 import { LeadText } from '../src/components/LeadText.js';
