Update to cross-doc links

--- a/docs/sql/sfmc-sql-basics.mdx
+++ b/docs/sql/sfmc-sql-basics.mdx
@@ -30,7 +30,7 @@ There are four most important elements that you will be using in nearly every qu
 * `JOIN`/`ON`: tell the query how you want to merge data from multiple sources
 * `WHERE`: tell the query which part of the above data is interesting to you
 
-To learn more about writing queries, check out deep-dive on [SQL Statements](/docs/sql/sfmc-sql-statements) and [SFMC Data Views](/docs/sql/sfmc-sql-system-data-views).
+To learn more about writing queries, check out deep-dive on [SQL Statements](sfmc-sql-statements.mdx) and [SFMC Data Views](sfmc-sql-system-data-views.mdx).
 
 ## Query Studio
 
