--- a/docs/ssjs/ssjs-if-and-switch.mdx
+++ b/docs/ssjs/ssjs-if-and-switch.mdx
@@ -154,7 +154,7 @@ In the above example, we are doing multiple tests ordered from the easiest to th
 
 ### Pseudo-Ternary
 
-Despite the JavaScript [ternary](/docs/js/js-if-and-switch#ternary) operator is not supported in SSJS, you can leverage shortcircuiting to get the same outcome. If a simple `if` statement has only two possible outcomes depending on a condition, ternary is more straightforward and readable alternative. Based on previous example, instead of:
+Despite the JavaScript [ternary](/docs/js/js-if-and-switch.mdx#ternary) operator is not supported in SSJS, you can leverage shortcircuiting to get the same outcome. If a simple `if` statement has only two possible outcomes depending on a condition, ternary is more straightforward and readable alternative. Based on previous example, instead of:
 
 ```js {2-7} title="Dirty if statement using basic 'if'"
 for (var customer in customers) {
