--- a/docs/sql/sfmc-sql-statements.mdx
+++ b/docs/sql/sfmc-sql-statements.mdx
@@ -155,9 +155,7 @@ SELECT
 
 ### Flow control
 
-`IF` statement
-
-https://docs.microsoft.com/en-us/sql/t-sql/language-elements/if-else-transact-sql?view=sql-server-ver15
+Despite official [SFMC SQL documentation](https://help.salesforce.com/articleView?id=mc_as_sql_reference.htm&type=5) states that it supports the `IF` constructs, I was not able to make it work.
 
 ### Variables & Functions
 
@@ -166,6 +164,71 @@ Unfortunately, SFMC SQL does not support variables.
 Fortunately, it does support functions. Learn more about them in [SFMC SQL Functions documentation](sfmc-sql-functions.mdx).
 
 ## From
+
+The `SELECT` statement alone won't do anything. Once you have selected columns you want to work with, you need also to pick the table (Data Extension or System Data View) from which those columns should be taken. The code for this is simple:
+
+```sql {4}
+SELECT
+    ContactKey,
+    EmailAddress,
+FROM MasterSubscriberDE
+```
+
+Just as with column names, if the name of your Data Extension has spaces in it, be sure to enclose it in brackets.
+
+```sql {4}
+SELECT
+    ContactKey,
+    EmailAddress,
+FROM [Master Subscriber DE]
+```
+
+There are, however, two cases, specific to Salesforce Marketing Cloud, that adds a twist. System Data Views and Enterprise Data Extensions.
+
+### System Data Views
+
+[System Data Views](sfmc-sql-system-data-views.mdx) are partially hidden Data Extensions used by the Salesforce Marketing Cloud to store data. Thing about Email Sent history, Opens and Clicks, Bounces and Complaints. You can find there also tracking data for SMS and Social channels. Also more technical data points, like Jobs and Enterprise Attributes, are using System Data Views. The difference related to those tables is in naming convention. When querying them you must leverage `_` prefix:
+
+```sql {8}
+SELECT
+    JobID,
+    EmailID,
+    EmailName,
+    EmailSubject,
+    EmailSendDefinition,
+    DeliveredTime
+FROM _Job
+```
+
+### Enterprise Data Extension
+
+If you want to query Shared Data Extensions or Synchronized Data Extensions you must use different special prefix, `ENT.`:
+
+```sql {4}
+SELECT
+    ContactKey,
+    EmailAddress,
+FROM ENT.SharedSegment
+```
+
+Remember that account permissons restrictions may apply.
+
+:::note You Should Know
+
+In some scenarios you might want to use both above options in the same time. For example, if you query System Data View _Subscribers on child Business Unit, you will receive data only for the subscribers stored in this child. In case you want to query all your subscribers, you should point to Enterprise level System Data View:
+
+```sql {6}
+SELECT
+    SubscriberKey,
+    EmailAddress,
+    DateJoined,
+    DateUnsubscribed
+FROM ENT._Subscribers
+```
+
+:::
+
+When selecting Data Extensions to pull data from, remember about a best practice to avoid ones spanning a cumulative field width greater than 4000 characters. They will badly impact performance of your query. If needed, consider splitting your query into multiple consecutive queries.
 
 ## Join on
 
@@ -185,11 +248,8 @@ https://docs.microsoft.com/en-us/sql/t-sql/language-elements/set-operators-union
 
 ## Nested statements
 
-* `FROM`: location where data reside within Marketing Cloud (usually a data extension)
-* `JOIN`/`ON`: allows the query to search multiple tables and/or data extensions
-* `WHERE`: used to filter out data you do/don’t want
 
-3. Avoid Data Extensions spanning a cumulative field width greater than 4000 characters.
+
 
 1. Avoid non-searchable operators for the WHERE clause (OR, NOT, <, >, NOT EXISTS, NOT IN, NOT LIKE, intrinsic functions). Those operators cannot take advantage of indexes and cause the query activity to run more slowly. More efficient operators (=, AND) improve queries.
 
